--- a/configs/experiment/lpips_100k.yaml
+++ b/configs/experiment/lpips_100k.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 opt:
   iterations: 100001
-  pretrained_ckpt: null
+  pretrained_ckpt: /home/qianru/Projects/TUM/TUM_2/ADL4CV/Code/splatter-image/experiments_out/2024-06-01/15-39-56/
   lambda_lpips: 0.01
   base_lr: 0.000005
