--- a/configs/dataset/cars.yaml
+++ b/configs/dataset/cars.yaml
@@ -2,7 +2,7 @@
 data:
   znear: 0.1
   zfar: 10
-  fov: 51.98948897809546
+  fov: 42.44  #51.98948897809546
   category: cars
   white_background: false # this was originally 'true'
   origin_distances: false
