--- a/configs/default_config.yaml
+++ b/configs/default_config.yaml
@@ -17,12 +17,12 @@ data:
 opt:
   iterations: 800001
   base_lr: 0.00005
-  batch_size: 8
+  batch_size: 8 #originally 8
   betas:
     - 0.9
     - 0.999
   loss: l2
-  imgs_per_obj: 4
+  imgs_per_obj: 4 #originally 4
   ema: 
     use: true
     update_every: 10
@@ -55,7 +55,7 @@ model:
 
 logging:
   ckpt_iterations: 1000
-  val_log: 5000
+  val_log: 1000
   loss_log: 10
-  loop_log: 5000
-  render_log: 5000
+  loop_log: 1000
+  render_log: 1000
