--- a/configs/dataset/cars.yaml
+++ b/configs/dataset/cars.yaml
@@ -1,8 +1,8 @@
 # @package _global_
 data:
-  znear: 0.1
-  zfar: 10
-  fov: 42.44  #51.98948897809546
+  znear: 0.01 # originally 0.8
+  zfar: 10.0 # originally 2
+  fov: 42.44  # originally 51.98948897809546
   category: cars
   white_background: false # this was originally 'true'
   origin_distances: false
@@ -10,7 +10,7 @@ data:
 model:
   opacity_scale: 0.001
   opacity_bias: -3.0
-  scale_scale: 0.001
+  scale_scale: 0.001 # originally 0.001
   scale_bias: 0.02
-  xyz_scale: 0.000001
+  xyz_scale: 0.000001 # originally 0.000001
   xyz_bias: 0.0
