--- a/configs/dataset/cars.yaml
+++ b/configs/dataset/cars.yaml
@@ -1,16 +1,16 @@
 # @package _global_
 data:
-  znear: 0.01 # originally 0.8
-  zfar: 10.0 # originally 2
+  znear: 0.05 # originally 0.8
+  zfar: 20 # originally 2
   fov: 42.44  # originally 51.98948897809546
-  category: cars
+  category: cars # originally cars
   white_background: false # this was originally 'true'
-  origin_distances: false
+  origin_distances: false # this was originally 'false'
 
 model:
-  opacity_scale: 0.001
-  opacity_bias: -3.0
+  opacity_scale: 0.001 # originally 0.001
+  opacity_bias: -3.0 # originally -3.0
   scale_scale: 0.001 # originally 0.001
-  scale_bias: 0.02
+  scale_bias: 0.02 # originally 0.02
   xyz_scale: 0.000001 # originally 0.000001
-  xyz_bias: 0.0
+  xyz_bias: 0.0 # originally 0.0
