--- a/configs/experiment/lpips_100k.yaml
+++ b/configs/experiment/lpips_100k.yaml
@@ -1,6 +1,6 @@
 # @package _global_
 opt:
   iterations: 100001
-  pretrained_ckpt: /home/qianru/Projects/TUM/TUM_2/ADL4CV/Code/SplatterScene/experiments_out/2024-06-30/14-15-58/
+  pretrained_ckpt: /home/philipsdeng/文档/GitHub/SplatterScene/experiments_out/2024-07-01/20-22-11
   lambda_lpips: 0.01
   base_lr: 0.000005
