Use .png for gt depth, correct pose and gt points, big breakthrough

--- a/configs/dataset/cars.yaml
+++ b/configs/dataset/cars.yaml
@@ -1,8 +1,8 @@
 # @package _global_
 data:
-  znear: 0.05 # originally 0.8
-  zfar: 300 # originally 2
-  fov: 42.44  # originally 51.98948897809546
+  znear: 0.01 # originally 0.8
+  zfar: 5 # originally 2
+  fov: 69.72 #42.44  # originally 51.98948897809546
   category: cars # originally cars
   white_background: false # this was originally 'true'
   origin_distances: false # this was originally 'false'
